# polarion-rest-api-client

./: .buildinfo  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  build_client_source.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build-test-publish.yml  commit.yml  commits.yml  docs.yml  lint.yml
_sources/code/: modules.rst.txt  polarion_rest_api_client.clients.rst.txt  polarion_rest_api_client.open_api_client.api.collections.rst.txt  polarion_rest_api_client.open_api_client.api.document_attachments.rst.txt  polarion_rest_api_client.open_api_client.api.document_comments.rst.txt  polarion_rest_api_client.open_api_client.api.document_parts.rst.txt  polarion_rest_api_client.open_api_client.api.documents.rst.txt  polarion_rest_api_client.open_api_client.api.enumerations.rst.txt  polarion_rest_api_client.open_api_client.api.externally_linked_work_items.rst.txt  polarion_rest_api_client.open_api_client.api.feature_selections.rst.txt  polarion_rest_api_client.open_api_client.api.icons.rst.txt  polarion_rest_api_client.open_api_client.api.jobs.rst.txt  polarion_rest_api_client.open_api_client.api.linked_oslc_resources.rst.txt  polarion_rest_api_client.open_api_client.api.linked_work_items.rst.txt  polarion_rest_api_client.open_api_client.api.page_attachments.rst.txt  polarion_rest_api_client.open_api_client.api.pages.rst.txt  polarion_rest_api_client.open_api_client.api.plans.rst.txt  polarion_rest_api_client.open_api_client.api.project_templates.rst.txt  polarion_rest_api_client.open_api_client.api.projects.rst.txt  polarion_rest_api_client.open_api_client.api.revisions.rst.txt  polarion_rest_api_client.open_api_client.api.roles.rst.txt  polarion_rest_api_client.open_api_client.api.rst.txt  polarion_rest_api_client.open_api_client.api.test_record_attachments.rst.txt  polarion_rest_api_client.open_api_client.api.test_records.rst.txt  polarion_rest_api_client.open_api_client.api.test_run_attachments.rst.txt  polarion_rest_api_client.open_api_client.api.test_run_comments.rst.txt  polarion_rest_api_client.open_api_client.api.test_runs.rst.txt  polarion_rest_api_client.open_api_client.api.test_step_result_attachments.rst.txt  polarion_rest_api_client.open_api_client.api.test_step_results.rst.txt  polarion_rest_api_client.open_api_client.api.test_steps.rst.txt  polarion_rest_api_client.open_api_client.api.user_groups.rst.txt  polarion_rest_api_client.open_api_client.api.users.rst.txt  polarion_rest_api_client.open_api_client.api.work_item_approvals.rst.txt  polarion_rest_api_client.open_api_client.api.work_item_attachments.rst.txt  polarion_rest_api_client.open_api_client.api.work_item_comments.rst.txt  polarion_rest_api_client.open_api_client.api.work_item_work_records.rst.txt  polarion_rest_api_client.open_api_client.api.work_items.rst.txt  polarion_rest_api_client.open_api_client.models.rst.txt  polarion_rest_api_client.open_api_client.rst.txt  polarion_rest_api_client.rst.txt  (+1 more)
code/: modules.html  polarion_rest_api_client.clients.html  polarion_rest_api_client.html  polarion_rest_api_client.open_api_client.api.collections.html  polarion_rest_api_client.open_api_client.api.document_attachments.html  polarion_rest_api_client.open_api_client.api.document_comments.html  polarion_rest_api_client.open_api_client.api.document_parts.html  polarion_rest_api_client.open_api_client.api.documents.html  polarion_rest_api_client.open_api_client.api.enumerations.html  polarion_rest_api_client.open_api_client.api.externally_linked_work_items.html  polarion_rest_api_client.open_api_client.api.feature_selections.html  polarion_rest_api_client.open_api_client.api.html  polarion_rest_api_client.open_api_client.api.icons.html  polarion_rest_api_client.open_api_client.api.jobs.html  polarion_rest_api_client.open_api_client.api.linked_oslc_resources.html  polarion_rest_api_client.open_api_client.api.linked_work_items.html  polarion_rest_api_client.open_api_client.api.page_attachments.html  polarion_rest_api_client.open_api_client.api.pages.html  polarion_rest_api_client.open_api_client.api.plans.html  polarion_rest_api_client.open_api_client.api.project_templates.html  polarion_rest_api_client.open_api_client.api.projects.html  polarion_rest_api_client.open_api_client.api.revisions.html  polarion_rest_api_client.open_api_client.api.roles.html  polarion_rest_api_client.open_api_client.api.test_record_attachments.html  polarion_rest_api_client.open_api_client.api.test_records.html  polarion_rest_api_client.open_api_client.api.test_run_attachments.html  polarion_rest_api_client.open_api_client.api.test_run_comments.html  polarion_rest_api_client.open_api_client.api.test_runs.html  polarion_rest_api_client.open_api_client.api.test_step_result_attachments.html  polarion_rest_api_client.open_api_client.api.test_step_results.html  polarion_rest_api_client.open_api_client.api.test_steps.html  polarion_rest_api_client.open_api_client.api.user_groups.html  polarion_rest_api_client.open_api_client.api.users.html  polarion_rest_api_client.open_api_client.api.work_item_approvals.html  polarion_rest_api_client.open_api_client.api.work_item_attachments.html  polarion_rest_api_client.open_api_client.api.work_item_comments.html  polarion_rest_api_client.open_api_client.api.work_item_work_records.html  polarion_rest_api_client.open_api_client.api.work_items.html  tests.html
docs/: Makefile
open_api_client_build/: build_client.py  build_client_source.sh  config.yaml  polarionrest.json  polarionrest.json.license
polarion_rest_api_client/: __init__.py  base_client.py  client.py  data_models.py  errors.py  old_client.py
tests/: __init__.py  conftest.py  test_api_client.py  test_client_documents.py  test_client_error_responses.py  test_client_general.py  test_client_test_parameters.py  test_client_test_steps.py  test_client_testrecords.py  test_client_testruns.py  test_client_workitemattachments.py  test_client_workitemlinks.py  test_client_workitems.py  test_client_workitems_custom.py
(+4403 files in other folders)
